# computer-vision-app

./: .gitignore  BÁO_CÁO_DỰ_ÁN.md  BÁO_CÁO_DỰ_ÁN.tex  LICENSE  README.md  main.py  pyproject.toml
core/: compression.py  filters.py  frequency.py  geometry.py  morphology.py  pca.py  point.py  restoration.py  segmentation.py  worker.py
ui/: __init__.py  basic_tab.py  compression_tab.py  control_panel.py  filters_tab.py  frequency_tab.py  geometry_tab.py  image_viewer.py  main_window.py  morphology_tab.py  pca_tab.py  restoration_tab.py  segmentation_tab.py  zoomable_viewer.py
